src/objects/inscor__RFQ__c.object
<CustomObject>
    <fields>
        <fullName>Legacy_Ship_Method__c</fullName>
        <label>Legacy Ship Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Account_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Terms given to us by the vendor.</inlineHelpText>
        <label>Terms</label>
        <referenceTo>inscor__Account_Terms__c</referenceTo>
        <relationshipLabel>RFQs</relationshipLabel>
        <relationshipName>RFQs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Acct__c</fullName>
        <inlineHelpText>If this field is left blank when changing Ship Method then the default Acct # will be filled in automatically.</inlineHelpText>
        <label>Acct #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>RFQs</relationshipLabel>
        <relationshipName>RFQs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Business_Category_Auto_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Category Auto Update?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Business_Category__c</fullName>
        <label>Business Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Business_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>RFQs</relationshipLabel>
        <relationshipName>RFQs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Contact must be associated with the selected vendor</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.inscor__Vendor__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RFQs</relationshipLabel>
        <relationshipName>RFQs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Create_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>inscor__Created_From_CQ__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created From CQ</label>
        <referenceTo>inscor__Customer_Quote__c</referenceTo>
        <relationshipLabel>RFQs</relationshipLabel>
        <relationshipName>RFQs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__External_Comments_Available__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Comments Available</label>
        <referenceTo>inscor__Quick_Comment__c</referenceTo>
        <relationshipLabel>RFQs (External Comments Available)</relationshipLabel>
        <relationshipName>RFQs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__External_Comments_rt__c</fullName>
        <label>External Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__FOB__c</fullName>
        <label>FOB - RETIRED</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Generate_PDF_Selected_Docs__c</fullName>
        <label>Generate PDF Selected Docs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Internal_Comments_Available__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Comments Available</label>
        <referenceTo>inscor__Quick_Comment__c</referenceTo>
        <relationshipLabel>RFQs</relationshipLabel>
        <relationshipName>RFQs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Internal_Comments_rt__c</fullName>
        <label>Internal Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Number_of_Lines__c</fullName>
        <label>Number of Lines</label>
        <summaryForeignKey>inscor__RFQ_Line__c.inscor__RFQ_Number__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inscor__Port_Dest__c</fullName>
        <label>Port/Dest</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__RFQ_Total_Company_Value__c</fullName>
        <label>RFQ Total Company Value</label>
        <summarizedField>inscor__RFQ_Line__c.inscor__Company_Line_Total__c</summarizedField>
        <summaryForeignKey>inscor__RFQ_Line__c.inscor__RFQ_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inscor__RFQ_Total_Value__c</fullName>
        <label>RFQ Total Value</label>
        <summarizedField>inscor__RFQ_Line__c.inscor__Line_Total__c</summarizedField>
        <summaryForeignKey>inscor__RFQ_Line__c.inscor__RFQ_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inscor__Reference_ID__c</fullName>
        <label>Reference ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Reference__c</fullName>
        <label>Reference #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Ship_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If wanting to use the default Acct # when setting/changing Ship Method, make sure that Acct # is blank. If Acct # is filled in then it will not be automatically set.</inlineHelpText>
        <label>Ship Method</label>
        <referenceTo>inscor__Ship_Method__c</referenceTo>
        <relationshipLabel>RFQs</relationshipLabel>
        <relationshipName>RFQs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Ship_Terms__c</fullName>
        <label>Ship Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Shipping_Terms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Ship_To_Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Ship To Location</label>
        <referenceTo>inscor__Company_Location__c</referenceTo>
        <relationshipLabel>RFQs</relationshipLabel>
        <relationshipName>RFQs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Sent to Vendor</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Terms__c</fullName>
        <label>Terms - RETIRED</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Urgency__c</fullName>
        <label>Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Routine</fullName>
                    <default>true</default>
                    <label>Routine</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Vendor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.inscor__Hide_from_RFQ__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RFQs</relationshipLabel>
        <relationshipName>RFQs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>RFQ</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Vendor__c</columns>
        <columns>inscor__Create_Date__c</columns>
        <columns>inscor__Status__c</columns>
        <columns>inscor__Urgency__c</columns>
        <columns>inscor__RFQ_Total_Value__c</columns>
        <columns>inscor__Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All RFQs</label>
    </listViews>
    <listViews>
        <fullName>inscor__All_Open_RFQs</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>inscor__Vendor__c</columns>
        <columns>inscor__Status__c</columns>
        <columns>inscor__Urgency__c</columns>
        <columns>inscor__RFQ_Total_Value__c</columns>
        <columns>inscor__Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inscor__Status__c</field>
            <operation>notEqual</operation>
            <value>Complete,Cancelled</value>
        </filters>
        <label>All Open RFQs</label>
    </listViews>
    <nameField>
        <displayFormat>RFQ-{0}</displayFormat>
        <label>RFQ Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>inscor__Business_Category_blank_Auto_Update</fullName>
        <active>true</active>
        <errorConditionFormula>inscor__Business_Category_Auto_Update__c == true &amp;&amp; NOT(ISBLANK(TEXT(inscor__Business_Category__c)))</errorConditionFormula>
        <errorMessage>Auto Update Cannot be true when Business Category Selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Cancelled_cannot_be_changed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    ISCHANGED(inscor__Status__c),
    TEXT(PRIORVALUE(inscor__Status__c)) = &quot;Cancelled&quot;
)</errorConditionFormula>
        <errorMessage>Once cancelled, the RFQ cannot be reopened.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Company_field_required</fullName>
        <active>true</active>
        <errorConditionFormula>inscor__Company__c = &quot;&quot;</errorConditionFormula>
        <errorDisplayField>inscor__Company__c</errorDisplayField>
        <errorMessage>Company is a required field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Need_by_cannot_be_less_than_today</fullName>
        <active>false</active>
        <errorConditionFormula>CreatedDate   &lt; now()</errorConditionFormula>
        <errorMessage>Need by date cannot be less than today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Status_cannot_be_previous</fullName>
        <active>false</active>
        <errorConditionFormula>OR(
   AND
   (
     OR(
       ISPICKVAL(PRIORVALUE( inscor__Status__c ), &quot;In Progress&quot;),
       ISPICKVAL(PRIORVALUE( inscor__Status__c ), &quot;Sent to Vendor&quot;),
       ISPICKVAL(PRIORVALUE( inscor__Status__c ), &quot;Complete&quot;)
       ),
      ISPICKVAL(inscor__Status__c, &quot;Requested&quot;)
   )
,
   AND
   (
     OR(
       ISPICKVAL(PRIORVALUE( inscor__Status__c ), &quot;Sent to Vendor&quot;),
       ISPICKVAL(PRIORVALUE( inscor__Status__c ), &quot;Complete&quot;)
       ),
      ISPICKVAL(inscor__Status__c, &quot;In Progress&quot;)
   )
,
   AND
   (
     OR(
       ISPICKVAL(PRIORVALUE( inscor__Status__c ), &quot;Complete&quot;)
       ),
      ISPICKVAL(inscor__Status__c, &quot;Sent to Vendor&quot;)
   )
)</errorConditionFormula>
        <errorMessage>Status cannot be changed to a previous status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Vendor_field_required</fullName>
        <active>true</active>
        <errorConditionFormula>inscor__Vendor__c  = &quot;&quot;</errorConditionFormula>
        <errorDisplayField>inscor__Vendor__c</errorDisplayField>
        <errorMessage>Vendor is a required field</errorMessage>
    </validationRules>
</CustomObject>